z-index problem solved in product-details page

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -854,9 +854,13 @@ a {
     .products-tag-wrapper .tags-wrapper .tag p {
       font-size: 12px; }
 
-.product-details-slider-wrapper showm {
-  width: 400px;
-  height: 400px; }
+.product-details-slider-wrapper .showm {
+  width: 100%;
+  height: auto; }
+
+.product-details-slider-wrapper .showm div {
+  position: relative;
+  z-index: 9; }
 
 .product-details-slider-wrapper .small-img {
   width: 100%;
